2008-10-20  Dave McMurtrie  <davemcmurtrie@gmail.com>
	* request.c: Fixed buffer overflow condition when doing AUTH LOGIN.
	  Applied patch by Michael M. Slusarz to make internal
	  commands RFC compliant (prepend with X instead of P_).  Added
	  support for XPROXYREUSE response.
	  
	* README: Applied patch by Michael M. Slusarz to describe new
	  internal command names (prepended with X instead of P_).

	* imapcommon.c: Applied patch by Michael M. Slusarz to support
	  XPROXYREUSE.

	* main.c: Applied patch by Michael M. Slusarz to add XIMAPPROXY
	  to capability string returned by imapproxy to clients.

	* imapproxy.h: Applied patch by Michael M. Slusarz to support
	  XPROXYREUSE.

	* common.h: Updated version to 1.2.7rc1

2008-03-05  Dave McMurtrie  <davemcmurtrie@gmail.com>

	* main.c: Applied patch by Noel B to disable IDLE capability.

2008-01-28  Dave McMurtrie  <davemcmurtrie@gmail.com>

	* Version 1.2.6 released.

	* common.h: Updated version to 1.2.6

2007-11-15  Dave McMurtrie  <davemcmurtrie@gmail.com>

	* main.c: Applied pidfile support and daemon enhancement patch
	  by Jose Luis Tallon.

	* imapproxy.h: Applied pidfile support patch by Jose Luis Tallon.

	* common.h: Updated version string to 1.2.6rc2

2007-05-31  Dave McMurtrie  <davemcmurtrie@gmail.com>

	* main.c: Applied OpenSSL threads patch by Jan Grant.  Applied ipv6
	  patch by Antonio Querubin.

	* imapproxy.h: Applied OpenSSL threads patch by Jan Grant.  Applied
	  ipv6 patch by Antonio Querubin.

	* threads.c: New file, from OpenSSL threads patch by Jan Grant.

	* Makefile.in: Applied OpenSSL threads patch by Jan Grant.

	* imapcommon.c: Applied patch by Matt Selsky to prevent compilation
	  errors due to missing md5.h include directive.  Applied ipv6 patch
	  by Antonio Querubin.

	* config.c: Applied ipv6 patch by Antonio Querubin.

	* request.c: Applied ipv6 patch by Antonio Querubin.

	* common.h: Updated version string to 1.2.6rc1
